<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ezScrum Mobile</string>
    <string name="projectList">Project List</string>
    <string name="featureView">Feature View</string>
    <string name="productBacklog">Product Backlog</string>
    <string name="productBacklogReference">Product Backlog Reference</string>
    <string name="quickEdit">Quick Edit</string>
    <string name="sprintBacklog">Sprint Backlog</string>
    <string name="sprintPlan">Sprint Plan</string>
    <string name="importance">Importance</string>
    <string name="value">Value</string>
    <string name="estimation">Estimation</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="action_logout">Sign Out</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="add_existed_task">Add existed task</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="filter_type">Filter Type</string>
    <string name="filter_story">Filter Story</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reference">Reference</string>
    <string name="search">Search here</string>
    
</resources>