<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" android:gravity="right">

           	<ImageButton
	            android:id="@+id/sprintbacklog_addexistingstory_clear_imageButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="addexistingstory_clear"
	            android:background="@color/transparent"
	            android:layout_gravity="center_vertical"
	            android:src="@drawable/button_clear"/>
	        <ImageButton
	            android:id="@+id/sprintbacklog_addexistingstory_refresh_imageButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:contentDescription="addexistingstory_refresh"
	            android:background="@color/transparent"
	            android:layout_gravity="center_vertical"
	            android:src="@drawable/button_refresh" />
	
	        <TextView
	            android:id="@+id/sprintbacklog_addexistingstory_refreshTime_textView"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:text="更新時間" android:gravity="center"/>
    	</LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <CheckBox android:id="@+id/sprintBacklog_addexistingstory_rowLabel_story_checkBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/sprintBacklog_addexistingstory_rowLabel_storyID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/id"/>

        <TextView
            android:id="@+id/sprintBacklog_addexistingstory_rowLabel_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/name" />

        <TextView
            android:id="@+id/sprintBacklog_addexistingstory_rowLabel_importance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/importance"/>

        <TextView
            android:id="@+id/sprintBacklog_addexistingstory_rowLabel_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/value"/>

        <TextView
            android:id="@+id/sprintBacklog_addexistingstory_rowLabel_estimation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/estimation"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/sprintBacklog_addexistingstory_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true" >
        </ListView>

    </LinearLayout>
</LinearLayout>